changing the src folder

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
         <div class="row">
           <div class="col-sm-12 col-lg-3 col-md-2 d-flex justify-content-center">
-            <img src="../img/NEBULA.png" alt="Nebula Logo">
+            <img src="img/NEBULA.png" alt="Nebula Logo">
           </div>
           <div class="col-sm-12 col-lg-6 col-md-8 d-flex justify-content-center pt-2 pb-5">
             <ul class="nav gap-5 mt-5">
@@ -43,21 +43,21 @@
 
         <div class="carousel-inner">
           <div class="carousel-item active c-item">
-            <img src="../img/spacex-uj3hvdfQujI-unsplash.jpg" class="d-block w-100 c-img" alt="...">
+            <img src="img/spacex-uj3hvdfQujI-unsplash.jpg" class="d-block w-100 c-img" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Beyond the Horizon: Your Gateway to the Cosmos</h5>
               <p>Discover the wonders of space as you journey beyond Earth's limits to explore the vast unknown.</p>
             </div>
           </div>
           <div class="carousel-item c-item">
-            <img src="../img/nasa-8Hjx3GNZYeA-unsplash.jpg" class="d-block w-100 c-img" alt="...">
+            <img src="img/nasa-8Hjx3GNZYeA-unsplash.jpg" class="d-block w-100 c-img" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Journey to the Infinite</h5>
               <p>Embark on a breathtaking adventure into the endless expanse of the universe and witness its majesty.</p>
             </div>
           </div>
           <div class="carousel-item c-item">
-            <img src="../img/nasa-jlV2k_Fx0fc-unsplash.jpg" class="d-block w-100 c-img" alt="...">
+            <img src="img/nasa-jlV2k_Fx0fc-unsplash.jpg" class="d-block w-100 c-img" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Stars Within Reach</h5>
               <p>Turn your dream of touching the stars into reality with a journey that redefines exploration. See Earth from above and connect with the cosmos like never before.</p>
@@ -81,7 +81,7 @@
         <div class="row justify-content-around pt-5 gap-2">
 
           <div class="card" style="width: 18rem;">
-            <img src="../img/earth.jpg" class="card-img-top c-cimg " alt="earth">
+            <img src="img/earth.jpg" class="card-img-top c-cimg " alt="earth">
             <div class="card-body">
               <h5 class="card-title">Orbital Adventures: A Journey Around Earth</h5>
               <p class="card-text">Experience the thrill of orbiting our planet in a state-of-the-art spacecraft. Witness Earth from a breathtaking perspective as you circle the globe, watching sunrises and sunsets from space in mere minutes. </p>
@@ -90,7 +90,7 @@
           </div>
 
           <div class="card" style="width: 18rem;">
-            <img src="../img/moon.jpg" class="card-img-top c-cimg" alt="moon">
+            <img src="img/moon.jpg" class="card-img-top c-cimg" alt="moon">
             <div class="card-body">
               <h5 class="card-title">Lunar Expeditions: Walk on the Moon</h5>
               <p class="card-text">Step into history with an extraordinary trip to the Moon. Travel across the cosmos to explore its surface, marvel at the stunning lunar landscape, and gaze back at Earth as only a handful of people have before.</p>
@@ -99,7 +99,7 @@
           </div>
 
           <div class="card" style="width: 18rem;">
-            <img src="../img/nebu.jpg" class="card-img-top c-cimg" alt="...">
+            <img src="img/nebu.jpg" class="card-img-top c-cimg" alt="...">
             <div class="card-body">
               <h5 class="card-title">Suborbital Thrills: The Edge of Space Experience</h5>
               <p class="card-text">Take an exhilarating suborbital flight to the edge of space, where adventure meets the final frontier. Feel the rush of ascent, experience moments of weightlessness.</p>
